// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/shareBoardComponent return shareBoardComponent and click Copy link 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="ShareBoardComponent"
    >
      <div
        class="row"
      >
        <div>
          Anyone with the link can view this board and all cards in it.
        </div>
        <div
          class="Switch on"
        >
          <div
            class="octo-switch-inner"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <a
          class="shareUrl"
          href="http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=oneToken"
          rel="noreferrer"
          target="_blank"
        >
          http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=oneToken
        </a>
        <button
          type="button"
        >
          <span>
            Copied!
          </span>
        </button>
      </div>
      <div
        class="row"
      >
        <button
          type="button"
        >
          <span>
            Regenerate token
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoardComponent return shareBoardComponent and click Regenerate token 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="ShareBoardComponent"
    >
      <div
        class="row"
      >
        <div>
          Anyone with the link can view this board and all cards in it.
        </div>
        <div
          class="Switch on"
        >
          <div
            class="octo-switch-inner"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <a
          class="shareUrl"
          href="http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=oneToken"
          rel="noreferrer"
          target="_blank"
        >
          http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=oneToken
        </a>
        <button
          type="button"
        >
          <span>
            Copy link
          </span>
        </button>
      </div>
      <div
        class="row"
      >
        <button
          type="button"
        >
          <span>
            Regenerate token
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoardComponent return shareBoardComponent and click Switch 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="ShareBoardComponent"
    >
      <div
        class="row"
      >
        <div>
          Anyone with the link can view this board and all cards in it.
        </div>
        <div
          class="Switch on"
        >
          <div
            class="octo-switch-inner"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <a
          class="shareUrl"
          href="http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=oneToken"
          rel="noreferrer"
          target="_blank"
        >
          http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=oneToken
        </a>
        <button
          type="button"
        >
          <span>
            Copy link
          </span>
        </button>
      </div>
      <div
        class="row"
      >
        <button
          type="button"
        >
          <span>
            Regenerate token
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoardComponent return shareBoardComponent and click Switch without sharing 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="ShareBoardComponent"
    >
      <div
        class="row"
      >
        <div>
          Anyone with the link can view this board and all cards in it.
        </div>
        <div
          class="Switch on"
        >
          <div
            class="octo-switch-inner"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <a
          class="shareUrl"
          href="http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=aToken"
          rel="noreferrer"
          target="_blank"
        >
          http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=aToken
        </a>
        <button
          type="button"
        >
          <span>
            Copy link
          </span>
        </button>
      </div>
      <div
        class="row"
      >
        <button
          type="button"
        >
          <span>
            Regenerate token
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoardComponent should match snapshot 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="ShareBoardComponent"
    >
      <div
        class="row"
      >
        <div>
          Publish and share this board with anyone who has the link
        </div>
        <div
          class="Switch"
        >
          <div
            class="octo-switch-inner"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoardComponent should match snapshot with sharing 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="ShareBoardComponent"
    >
      <div
        class="row"
      >
        <div>
          Anyone with the link can view this board and all cards in it.
        </div>
        <div
          class="Switch on"
        >
          <div
            class="octo-switch-inner"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <a
          class="shareUrl"
          href="http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=oneToken"
          rel="noreferrer"
          target="_blank"
        >
          http://localhost/plugins/focalboard/workspace/1/shared/1/1?r=oneToken
        </a>
        <button
          type="button"
        >
          <span>
            Copy link
          </span>
        </button>
      </div>
      <div
        class="row"
      >
        <button
          type="button"
        >
          <span>
            Regenerate token
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoardComponent should match snapshot with sharing and without workspaceId 1`] = `
<div>
  <div
    class="Modal bottom"
  >
    <div
      class="toolbar hideOnWidescreen"
    >
      <button
        aria-label="Close"
        class="Button IconButton"
        title="Close"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
    <div
      class="ShareBoardComponent"
    >
      <div
        class="row"
      >
        <div>
          Anyone with the link can view this board and all cards in it.
        </div>
        <div
          class="Switch on"
        >
          <div
            class="octo-switch-inner"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <a
          class="shareUrl"
          href="http://localhost/shared/1/1?r=oneToken"
          rel="noreferrer"
          target="_blank"
        >
          http://localhost/shared/1/1?r=oneToken
        </a>
        <button
          type="button"
        >
          <span>
            Copy link
          </span>
        </button>
      </div>
      <div
        class="row"
      >
        <button
          type="button"
        >
          <span>
            Regenerate token
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
